--- a/Patlite.Service/appsettings.json
+++ b/Patlite.Service/appsettings.json
@@ -29,7 +29,7 @@
       {
         "Name": "File",
         "Args": {
-          "path": ".\\Log\\AutoPortForward_.log",
+          "path": ".\\Log\\PatliteService_.log",
           "rollingInterval": "Day",
           "outputTemplate": "{Timestamp:HH:mm:ss.fff} {Level:u4} {MachineName} [{ThreadId}] - {Message:lj}{NewLine}{Exception}"
         }
